# dataeng-rust-python-lambda-demo

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  enqueue.json
.github/workflows/: black.yml  tests.yml
src/0_naive_python/: index-tarballs.py
src/1_naive_rust/: Cargo.toml
src/1_naive_rust/src/: main.rs
src/2_faster_rust/: Cargo.toml
src/2_faster_rust/src/: main.rs
src/3_s3_python/: index-tarballs.py
src/4_s3_rust/: Cargo.toml
src/4_s3_rust/src/: main.rs
src/5_lambda_python/: index-tarballs-lambda.py  lambda_function.py
src/6_lambda_rust/: Cargo.toml  Dockerfile-arm64  Dockerfile-x86_64
src/6_lambda_rust/src/: main.rs
