[package]
name = "index-tarballs-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-tar = "0.4"
async-trait = "0.1"
aws-config = "0.49"
aws-sdk-s3 = "0.19"
clap = "4"
cobalt-aws = "0.8.0"
futures = "0.3"
tokio = { version = "1", features=["full"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"